--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -14,7 +14,9 @@
         <% for(campground of campgrounds){ %>
 
             <li>
-                <%= campground.title %>
+                <a href="campgrounds/<%= campground._id %>">
+                    <%= campground.title %>
+                </a>
             </li>
             <% } %>
     </ul>
